# YALCI

./: LICENSE  README.md  YALCI.cabal
app/: Main.hs
programs/: README.md  default_tests.txt
src/: Display.hs  Evaluation.hs  Helper.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y  Semantics.hs  Syntax.hs  Typing.hs
